Theme_3_3_Airflow/airflow/logs/dag_id=fetch_exchange_rates_dag/run_id=manual__2023-07-26T013711.169074+0000/task_id=fetch_exchange_rates_task/attempt=1.log
[2023-07-26 01:37:12,739] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: fetch_exchange_rates_dag.fetch_exchange_rates_task manual__2023-07-26T01:37:11.169074+00:00 [queued]>
[2023-07-26 01:37:12,746] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: fetch_exchange_rates_dag.fetch_exchange_rates_task manual__2023-07-26T01:37:11.169074+00:00 [queued]>
[2023-07-26 01:37:12,747] {taskinstance.py:1376} INFO - 
--------------------------------------------------------------------------------
[2023-07-26 01:37:12,747] {taskinstance.py:1377} INFO - Starting attempt 1 of 1
[2023-07-26 01:37:12,748] {taskinstance.py:1378} INFO - 
--------------------------------------------------------------------------------
[2023-07-26 01:37:12,758] {taskinstance.py:1397} INFO - Executing <Task(PythonOperator): fetch_exchange_rates_task> on 2023-07-26 01:37:11.169074+00:00
[2023-07-26 01:37:12,763] {standard_task_runner.py:52} INFO - Started process 472 to run task
[2023-07-26 01:37:12,765] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'fetch_exchange_rates_dag', 'fetch_exchange_rates_task', 'manual__2023-07-26T01:37:11.169074+00:00', '--job-id', '5', '--raw', '--subdir', 'DAGS_FOLDER/my_calc_rates.py', '--cfg-path', '/tmp/tmps9oc4i7s', '--error-file', '/tmp/tmpy4iuqt40']
[2023-07-26 01:37:12,766] {standard_task_runner.py:80} INFO - Job 5: Subtask fetch_exchange_rates_task
[2023-07-26 01:37:12,823] {task_command.py:371} INFO - Running <TaskInstance: fetch_exchange_rates_dag.fetch_exchange_rates_task manual__2023-07-26T01:37:11.169074+00:00 [running]> on host 6e11a261c833
[2023-07-26 01:37:12,881] {taskinstance.py:1591} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=marina_z
AIRFLOW_CTX_DAG_ID=fetch_exchange_rates_dag
AIRFLOW_CTX_TASK_ID=fetch_exchange_rates_task
AIRFLOW_CTX_EXECUTION_DATE=2023-07-26T01:37:11.169074+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-07-26T01:37:11.169074+00:00
[2023-07-26 01:37:13,336] {logging_mixin.py:115} INFO - Save a new table exchange_latest_BTC.csv
[2023-07-26 01:37:13,346] {taskinstance.py:1909} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 171, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 189, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/my_calc_rates.py", line 79, in fetch_exchange_rates
    cur.execute(create_table_query)
psycopg2.errors.SyntaxError: syntax error at or near "CREATE"
LINE 3:         CREATE TABLE IF NOT EXISTS exchange_rates_BTC (
                ^

[2023-07-26 01:37:13,355] {taskinstance.py:1420} INFO - Marking task as FAILED. dag_id=fetch_exchange_rates_dag, task_id=fetch_exchange_rates_task, execution_date=20230726T013711, start_date=20230726T013712, end_date=20230726T013713
[2023-07-26 01:37:13,364] {standard_task_runner.py:97} ERROR - Failed to execute job 5 for task fetch_exchange_rates_task (syntax error at or near "CREATE"
LINE 3:         CREATE TABLE IF NOT EXISTS exchange_rates_BTC (
                ^
; 472)
[2023-07-26 01:37:13,380] {local_task_job.py:156} INFO - Task exited with return code 1
[2023-07-26 01:37:13,406] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
